--- a/XIB-BasedSimpleCamera/CustomOverlayViewController.xib
+++ b/XIB-BasedSimpleCamera/CustomOverlayViewController.xib
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -16,21 +17,53 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT" customClass="CustomOverlayView">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Photo" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wzH-vK-wrJ">
-                    <rect key="frame" x="151" y="323" width="73" height="20.5"/>
+                    <rect key="frame" x="170.66666666666666" y="357.66666666666669" width="73" height="20.666666666666629"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5s8-fR-WHv">
+                    <rect key="frame" x="20" y="616" width="100" height="100"/>
+                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="5s8-fR-WHv" secondAttribute="height" multiplier="1:1" id="7XP-Xx-G6n"/>
+                        <constraint firstAttribute="width" constant="100" id="NRX-JW-jsS"/>
+                    </constraints>
+                    <state key="normal" title="Shoot"/>
+                    <connections>
+                        <action selector="shootButton:" destination="i5M-Pr-FkT" eventType="touchUpInside" id="gkM-D2-hfg"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fee-jT-yYf">
+                    <rect key="frame" x="294" y="616" width="100" height="100"/>
+                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="100" id="EHd-hg-0rR"/>
+                        <constraint firstAttribute="width" secondItem="fee-jT-yYf" secondAttribute="height" multiplier="1:1" id="th3-d6-k7R"/>
+                    </constraints>
+                    <state key="normal" title="Cancel"/>
+                    <connections>
+                        <action selector="cancelButton:" destination="i5M-Pr-FkT" eventType="touchUpInside" id="OHB-WM-6B0"/>
+                    </connections>
+                </button>
             </subviews>
             <constraints>
                 <constraint firstItem="wzH-vK-wrJ" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="PY2-0f-Vtw"/>
+                <constraint firstItem="5s8-fR-WHv" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="Tri-ZY-qld"/>
+                <constraint firstAttribute="bottom" secondItem="5s8-fR-WHv" secondAttribute="bottom" constant="20" id="U9U-8J-HCp"/>
                 <constraint firstItem="wzH-vK-wrJ" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="e5O-f4-bK0"/>
+                <constraint firstAttribute="trailing" secondItem="fee-jT-yYf" secondAttribute="trailing" constant="20" id="nqg-Pa-faY"/>
+                <constraint firstAttribute="bottom" secondItem="fee-jT-yYf" secondAttribute="bottom" constant="20" id="pqH-g8-ssw"/>
+                <constraint firstItem="fee-jT-yYf" firstAttribute="width" secondItem="fee-jT-yYf" secondAttribute="height" multiplier="1:1" id="sob-cg-uad"/>
             </constraints>
-            <point key="canvasLocation" x="33.5" y="53.5"/>
+            <connections>
+                <outlet property="cameraLabel" destination="wzH-vK-wrJ" id="xFV-dY-9Vo"/>
+            </connections>
+            <point key="canvasLocation" x="90" y="20"/>
         </view>
     </objects>
 </document>
